# sqlite3-pb-ext-gen

./: .gitignore  .gitmodules  .npmignore  LICENSE  README.md  package.json  sqlite3-pb-ext-gen-1.0.21.tgz  tsconfig.json
.github/: FUNDING.yml
assets/: GenerateProject.cmake.hls  help.txt
assets/extensionCMakePath/: .gitignore  CMakeLists.txt  LICENSE
assets/extensionCMakePath/sqlite3/: .gitignore  CMakeLists.txt  build_options.txt  version_numbers.json  versions.json
assets/extensionCMakePath/src/: common.h  main_module.cpp  pb_each.cpp  pb_each.h  pb_field.cpp  pb_field.h
src/: index.ts  pb_extract_generator.ts  processArgsValidator.ts
src/templates/pb_extract/: pb_extract.cpp.templ.ts  pb_extract.h.templ.ts
src/templates/pb_extract/fields/: messageField.templ.ts  repeatedMessageField.templ.ts  repeatedScalarField.templ.ts  scalarField.templ.ts
